# s3-download-proxy

./: .editorconfig  Cargo.toml  Containerfile  README.md
.ci/: setup-test-database.sh  test-data.sql
.github/workflows/: ci.yml  pinact.yml  zizmor.yml
.sqlx/: query-62ec941cc2dc0a04008c80c56e2e382f2ed3239ae20ae65646d57e5957aea2b6.json  query-8bf97bbce4b4f5e64eeb82bb72fb6d084f601efec72f2d61055ea4d6b6c3879d.json
samples/: db-setup.sql  default.config  user-setup.sql
src/: apperror.rs  db.rs  main.rs  metrics.rs  s3.rs  state.rs
