[package]
name = "s3-download-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15.0"
axum = { version = "0.7.4", features = ["macros"] }
foundations = "3.2.1"
sqlx = { version = "0.7.3", features = ["postgres", "tls-native-tls", "uuid", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }

[dev-dependencies]
reqwest = "0.11.24"
