[package]
name = "s3-download-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15.0"
axum = { version = "0.7.4", features = ["macros"] }
foundations = "3.2.1"
sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls", "uuid", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tower_governor = "0.3.2"

[dev-dependencies]
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots"] }

[profile.release]
strip = "none"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
